# clean_slam

./: .gitignore  CMakeLists.txt  README.md  build.sh
config/: Huawei.yaml  TUM1.yaml
include/: slam_system.h
src/: CMakeLists.txt  bound.cpp  bound.h  bundle_adjustment.cpp  bundle_adjustment.h  camera_motion_estimator.cpp  camera_motion_estimator.h  covisibility_graph.cpp  covisibility_graph.h  cv_algorithms.cpp  cv_algorithms.h  cv_utils.cpp  cv_utils.h  dataset_loader.cpp  dataset_loader.h  eigen_utils.cpp  eigen_utils.h  epipolar_constraint_motion_estimator.cpp  epipolar_constraint_motion_estimator.h  frame.cpp  frame.h  frame_artifact.cpp  frame_artifact.h  full_bundle_adjustment.cpp  full_bundle_adjustment.h  graph.h  ground_truth.cpp  ground_truth.h  homogeneous_matrix.cpp  homogeneous_matrix.h  homography_motion_estimator.cpp  homography_motion_estimator.h  i_projective_transformation.cpp  i_projective_transformation.h  initializer.cpp  initializer.h  ioc_factory.cpp  ioc_factory.h  key_frame.cpp  key_frame.h  (+43 more)
src/views/: descriptor.h  elements_view.cpp  elements_view.h  iterator.cpp  iterator.h
test/: CMakeLists.txt  test_cv_utils..cpp  test_dataset_loader.cpp  test_frame.cpp  test_local_mapping.cpp  test_map_point.cpp  test_observer.cpp  test_opencv_functions.cpp  test_points_3d_view.cpp  test_search_by_projection.cpp  test_slam_system.cpp  test_slam_system_freiburg.cpp  test_slam_system_homography.cpp
test/huawei_640x480/: rgb.txt
